syntax = "proto3";

package xyz.block.ftl.v1.console;

import "xyz/block/ftl/v1/ftl.proto";
import "xyz/block/ftl/v1/schema/schema.proto";

option go_package = "github.com/TBD54566975/ftl/protos/xyz/block/ftl/v1/console;pbconsole";
option java_multiple_files = true;

message MetricCounter {
  int64 value = 1;
}

message MetricHistorgram {
  int64 count = 1;
  int64 sum = 2;
  repeated uint64 bucket = 3;
}

message Verb {
  schema.VerbRef verb_ref = 1;
  MetricCounter call_count = 2;
  MetricHistorgram call_latency = 3;
  MetricCounter call_error_count = 4;
}

message Module {
  string name = 1;
  string language = 2;
  repeated Verb verbs = 3;
}

message GetModulesRequest {}
message GetModulesResponse {
  repeated Module modules = 1;
}

service ConsoleService {
  // Ping service for readiness.
  rpc Ping(PingRequest) returns (PingResponse) {
    option idempotency_level = NO_SIDE_EFFECTS;
  }

  rpc GetModules(GetModulesRequest) returns (GetModulesResponse);
}
